--- a/index.html
+++ b/index.html
@@ -16,10 +16,35 @@
         </div>
         <div class="main">
             <h3>Escreva seu código abaixo:</h3>
-            <textarea id="code" cols="30" rows="20" placeholder='{<< "Hello, world!;"}'></textarea>
-            <br>
-            <input type="button" id="inRun" value="Run">
-            <input type="button" id="inReset" value="Reset">
+            <textarea id="code" cols="30" rows="10" placeholder='{<< "Hello, world!;"}'></textarea>
+            <div id="snipets">
+                <input type="button" id="{" value="{">
+                <input type="button" id="}" value="}">                
+                <input type="button" id="  " value="&#8677;">
+                <input type="button" id="[" value="[">
+                <input type="button" id="]" value="]">
+                <input type="button" id="(" value="(">
+                <input type="button" id=")" value=")">
+                <input type="button" id="$" value="$">
+                <input type="button" id="?" value="?">
+                <input type="button" id=";" value=";">
+                <input type="button" id="," value=",">
+                <input type="button" id="=" value="=">
+                <input type="button" id="!=" value="!=">
+                <input type="button" id="<" value="<">
+                <input type="button" id=">" value=">">                
+                <input type="button" id="+" value="+">
+                <input type="button" id="-" value="-">
+                <input type="button" id="*" value="*">
+                <input type="button" id="/" value="/">
+                <input type="button" id="%" value="%">
+                <input type="button" id="|" value="|">
+                <input type="button" id="&" value="&">
+                <input type="button" id="\" value="\">
+                <input type="button" id='""' value='"'>                
+            </div>
+            <input type="button" id="inRun" value="Rodar">
+            <input type="button" id="inReset" value="Limpar">
             <h3>Resultado:</h3>
             <textarea id="result" cols="30" rows="10"></textarea>
         </div>
