correção da posição do cursor após inclusão de snipets

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
             <h3>Escreva seu código abaixo:</h3>
             <textarea id="code" cols="30" rows="10" placeholder='{<< "Hello, world!;"}'></textarea>
             <div id="snipets">
-                <input type="button" id="{" value="{">
-                <input type="button" id="}" value="}">                
+                <input type="button" id="{}" value="{}"> 
+                <input type="button" id="[]" value="[]">
+                <input type="button" id="()" value="()">                
+                <input type="button" id='""' value='""'> 
+                <input type="button" id="??" value="??">                            
                 <input type="button" id="  " value="&#8677;">
-                <input type="button" id="[" value="[">
-                <input type="button" id="]" value="]">
-                <input type="button" id="(" value="(">
-                <input type="button" id=")" value=")">
                 <input type="button" id="$" value="$">
-                <input type="button" id="?" value="?">
                 <input type="button" id=";" value=";">
                 <input type="button" id="," value=",">
                 <input type="button" id="=" value="=">
@@ -40,8 +38,7 @@
                 <input type="button" id="%" value="%">
                 <input type="button" id="|" value="|">
                 <input type="button" id="&" value="&">
-                <input type="button" id="\" value="\">
-                <input type="button" id='""' value='"'>                
+                <input type="button" id="\" value="\">              
             </div>
             <input type="button" id="inRun" value="Rodar">
             <input type="button" id="inReset" value="Limpar">
