algumas mudanças de nomes e regras CSS

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <input type="button" id="&" value="&">
                 <input type="button" id="\" value="\">              
             </div>
-            <input type="button" id="inRun" value="Rodar">
-            <input type="button" id="inReset" value="Limpar">
+            <input type="button" id="btRun" value="Rodar">
+            <input type="button" id="btReset" value="Limpar">
             <h3>Resultado:</h3>
             <textarea id="result" cols="30" rows="10"></textarea>
         </div>
