mudança na posição das teclas snipets e do teclado snipet; inclusão de class double para teclas de símbolos duplos; novos snipets

--- a/index.html
+++ b/index.html
@@ -18,31 +18,34 @@
             <h3>Escreva seu código abaixo:</h3>
             <textarea id="code" cols="30" rows="10" placeholder='{<< "Hello, world!;"}'></textarea>
             <button id="btDisplaySnipets">Snipets &#9660;</button>
+            <input type="button" id="btRun" value="Rodar">
+            <input type="button" id="btReset" value="Limpar">
             <div class="hide" id="snipets">
-                <input type="button" id="{}" value="{}"> 
-                <input type="button" id="[]" value="[]">
-                <input type="button" id="()" value="()">                
+                <input type="button" id=";" value=";">                            
+                <input type="button" class="double" id="  " value="&#8677;">               
                 <input type="button" id='""' value='""'> 
-                <input type="button" id="??" value="??">                            
-                <input type="button" id="  " value="&#8677;">
-                <input type="button" id="$" value="$">
-                <input type="button" id=";" value=";">
-                <input type="button" id="," value=",">
+                <input type="button" id="?? ->" value="?? ->">
+                <input type="button" class="double" id="<<" value="<<">
+                <input type="button" class="double" id=">>" value=">>"> 
+                <input type="button" class="double" id="->" value="->">
+                <input type="button" id="[]" value="[]">
                 <input type="button" id="=" value="=">
-                <input type="button" id="!=" value="!=">
+                <input type="button" class="double" id="!=" value="!=">
                 <input type="button" id="<" value="<">
-                <input type="button" id=">" value=">">                
+                <input type="button" id=">" value=">">
+                <input type="button" id="\" value="\">               
+                <input type="button" id="," value=",">                            
                 <input type="button" id="+" value="+">
                 <input type="button" id="-" value="-">
                 <input type="button" id="*" value="*">
                 <input type="button" id="/" value="/">
                 <input type="button" id="%" value="%">
                 <input type="button" id="|" value="|">
-                <input type="button" id="&" value="&">
-                <input type="button" id="\" value="\">              
+                <input type="button" id="&" value="&">                
+                <input type="button" id="()" value="()">        
+                <input type="button" id="$" value="$">
+                <input type="button" id="{}" value="{}">           
             </div>
-            <input type="button" id="btRun" value="Rodar">
-            <input type="button" id="btReset" value="Limpar">
             <h3>Resultado:</h3>
             <textarea id="result" cols="30" rows="10"></textarea>
         </div>
