--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <ol>
                     <h1>TW/Fluxus</h1>
                     <p>
-                        TW/Fluxus é uma linguagem imparativa, estruturada e procedural.
+                        TW/Fluxus é uma linguagem imperativa, estruturada e procedural.
                         Os comandos são curtos, baseados em poucos símbolos intuitivos, alguns
                         comuns à outras linguagens. Ela visa simular, de maneira escrita,
                         os fluxogramas.
